automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,10 @@
    },
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "import pandas as pd\n",
+    "\n",
+    "pd.read_s"
    ]
   },
   {
