automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,7 @@
     "#Your code here\n",
     "import pandas as pd\n",
     "\n",
-    "pd.read_s"
+    "pd.read_csv('Zipcode_Demos.csv', skiprows=47)"
    ]
   },
   {
