--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,7 @@
     "#Your code here\n",
     "import pandas as pd\n",
     "\n",
-    "pd.read_csv('Data/Zipcode_Demos.csv', skiprows=47) # "
+    "pd.read_csv('Data/Zipcode_Demos.csv', skiprows=47) # Rows "
    ]
   },
   {
