automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,8 @@
     "#Your code here\n",
     "import pandas as pd\n",
     "\n",
-    "pd.read_csv('Data/Zipcode_Demos.csv', skiprows=47) # The rows at the top of the dataset give mean values for each column, so "
+    "pd.read_csv('Data/Zipcode_Demos.csv', skiprows=47) \n",
+    "# The rows at the top of the dataset give mean values for each column, so they were skipped."
    ]
   },
   {
