automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -444,7 +444,8 @@
     "import pandas as pd\n",
     "\n",
     "pd.read_csv('Data/Zipcode_Demos.csv', skiprows=47) \n",
-    "# The rows at the top of the dataset give mean values for each column, so they were skipped."
+    "# The rows at the top of the dataset give mean values for each column, so they were skipped.\n",
+    "# "
    ]
   },
   {
