automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -445,7 +445,7 @@
     "\n",
     "pd.read_csv('Data/Zipcode_Demos.csv', skiprows=47) \n",
     "# The rows at the top of the dataset give mean values for each column, so they were skipped.\n",
-    "# Jurisdiction "
+    "# Jurisdiction Name column li"
    ]
   },
   {
