automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "[10 rows x 47 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
     "\n",
     "pd.read_csv('Data/Zipcode_Demos.csv', skiprows=47) \n",
     "# The rows at the top of the dataset give mean values for each column, so they were skipped.\n",
-    "# Rows represent region by jurisdiction, columns give various data on partici"
+    "# Rows represent region by jurisdiction, columns give various data on participants."
    ]
   },
   {
