--- a/index.ipynb
+++ b/index.ipynb
@@ -1966,7 +1966,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "pd.read_csv('Data/Yelp_Reviews_Corrupt.csv', usecols=[0,1,2,3,4,5,6,7,8,9])"
+    "pd.read_csv('Data/Yelp_Reviews_Corrupt.csv', usecols=[0,1,2,3,4,5,6,7,8,9])\n"
    ]
   }
  ],
