automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1966,7 +1966,8 @@
    ],
    "source": [
     "#Your code here\n",
-    "pd.read_csv('Data/Yelp_Reviews_Corrupt.csv', usecols=[0,1,2,3,4,5,6,7,8,9])\n"
+    "pd.read_csv('Data/Yelp_Reviews_Corrupt.csv', usecols=[0,1,2,3,4,5,6,7,8,9])\n",
+    "# It seems that an additional column exists for only cer"
    ]
   }
  ],
