--- a/index.ipynb
+++ b/index.ipynb
@@ -1968,7 +1968,7 @@
     "#Your code here\n",
     "pd.read_csv('Data/Yelp_Reviews_Corrupt.csv', usecols=[0,1,2,3,4,5,6,7,8,9])\n",
     "# It seems that an additional column exists for only certain rows, causing certain data values to be offset from\n",
-    "# the intended location, and an error to occur when readi"
+    "# the intended location, and an error to occur when reading."
    ]
   }
  ],
