--- a/index.ipynb
+++ b/index.ipynb
@@ -1967,8 +1967,7 @@
    "source": [
     "#Your code here\n",
     "pd.read_csv('Data/Yelp_Reviews_Corrupt.csv', usecols=[0,1,2,3,4,5,6,7,8,9])\n",
-    "# It seems that an additional column exists for only certain rows, causing certain data values to be offset from\n",
-    "# the intended location, and an error to occur when reading."
+    "# It seems that som"
    ]
   }
  ],
