--- a/index.ipynb
+++ b/index.ipynb
@@ -1967,7 +1967,8 @@
    "source": [
     "#Your code here\n",
     "pd.read_csv('Data/Yelp_Reviews_Corrupt.csv', usecols=[0,1,2,3,4,5,6,7,8,9])\n",
-    "# It seems that some rows are reading as 11 field values, while there is only 10 expected"
+    "# It seems that some rows are reading as 11 field values, while there is only 10 expected.\n",
+    "# This is causing certain rows to have incorrect va"
    ]
   }
  ],
