--- a/index.ipynb
+++ b/index.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1959,7 @@
        "[4651 rows x 10 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1968,8 +1968,15 @@
     "#Your code here\n",
     "pd.read_csv('Data/Yelp_Reviews_Corrupt.csv', usecols=[0,1,2,3,4,5,6,7,8,9])\n",
     "# It seems that some rows are reading as 11 field values, while there is only 10 expected.\n",
-    "# This is causing certain rows to have incorrect va"
+    "# This is causing certain rows to have incorrect values in the respective field."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
